--- a/src/app/education/education.component.html
+++ b/src/app/education/education.component.html
@@ -11,7 +11,7 @@
               High School
           </p>
           <ul>
-            <li>Class beeing held on English</li>
+            <li>Class being held on English</li>
             <li>Mathematics and Informatics</li>
             <li>Various presentation skills</li>
         </ul>
