--- a/src/app/projects/projects.component.html
+++ b/src/app/projects/projects.component.html
@@ -13,8 +13,8 @@
 <img src="./assets/images/project1.png" alt="">
 <h4>Scarface Game in Qt</h4>
 <b>Technology:</b>Qt5 and C++ <br>
-<div class="btn btn-success mr-2">Demo</div>
-<div class="btn btn-success">Source code</div>
+<div class="btn btn-success mr-2 disabled">Demo</div>
+<div class="btn btn-success"><a href="https://github.com/Mcraellhs/Qt-c-Scarface-game">Source code</a></div>
 
 
 </div>
@@ -23,29 +23,57 @@
 
     <img src="./assets/images/project2.png" alt="">
     <h4>Angular Portfolio</h4>
-    <b>Technology:</b>Angular 10 and Bootstrap 4 <br>
-    <div class="btn btn-success mr-2">Demo</div>
-    <div class="btn btn-success">Source code</div>
+    <b>Technology:</b>Angular 10 and Bootstrap4 <br>
+    <div class="btn btn-success mr-2"><a href="https://app-portfolio-in-angular.herokuapp.com/">Demo</a></div>
+    <div class="btn btn-success"><a href="https://github.com/Mcraellhs/Personal-Portfolio-in-Angular">Source code</a></div>
     
     
     </div>
 
+    
     <div class="col-md-4">
-
-        <img src="./assets/images/javafx.png" alt="">
-        <h4 class="pt-4">Scarface Game in Qt</h4>
-        <b>Technology:</b>Qt5 and C++ <br>
-        <div class="btn btn-success mr-2">Demo</div>
-        <div class="btn btn-success">Source code</div>
+        
+        <img src="./assets/images/project5.png" alt="">
+        <h4>JavaScript Table Form</h4>
+        <b>Technology:</b>JavaScript HTML CSS<br>
+        <div class="btn btn-success mr-2"><a href="https://mcraellhs.github.io/JavaScript---Table-Form-CRUD-/">Demo</a></div>
+        <div class="btn btn-success"><a href="https://github.com/Mcraellhs/JavaScript---Table-Form-CRUD-">Source code</a></div>
         
         
         </div>
-
+    
 
 
     </div>
 
+    <div class="row mt-5">
 
+        <div class="col-md-4">
+
+            <img src="./assets/images/javafx.png" alt="">
+            <h4 class="pt-4">JavaFX Quiz Simulator</h4>
+            <b>Technology:</b>JavaFX MySQL <br>
+            <div class="btn btn-success mr-2 disabled">Demo</div>
+            <div class="btn btn-success"><a href="https://github.com/Mcraellhs/JavaFX-Quiz-simulator-with-UI">Source code</a></div>
+            
+            
+            </div>
+    
+        
+        <div class="col-md-4">
+        
+            <img src="./assets/images/project4.png" alt="">
+            <h4>Qt 25 Question Quiz</h4>
+            <b>Technology:</b>Qt5 <br>
+            <div class="btn btn-success mr-2 disabled">Demo</div>
+            <div class="btn btn-success"><a href="https://github.com/Mcraellhs/QT-c-Quiz-with-DB">Source code</a></div>
+            
+            
+            </div>
+        
+        
+        
+            </div>
 
 
 </div>
