--- a/src/app/sidebar/sidebar.component.html
+++ b/src/app/sidebar/sidebar.component.html
@@ -36,6 +36,6 @@
                 </li>
             </ul>
             <p>This site is made using<br> Angular 10 and Bootstrap 4</p>
-            <p>Source code on GitHub</p>
+            <p>Source code on <a href="https://github.com/Mcraellhs"><b>GITHUB</b></a></p>
         </nav>
     
