--- a/src/app/skills/skills.component.html
+++ b/src/app/skills/skills.component.html
@@ -27,7 +27,7 @@
       </div>
     </div>
 
-    <span style="float: left;">Angular</span>
+    <span style="float: left;">Angular/Bootstrap</span>
     <span style="float: right;">55%</span><br>
     <div class="progress" style="height:5px">
         <div class="progress-bar bg-danger" role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100" style="width: 55%;height:10px;">
