--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -3,14 +3,17 @@
 <span class="heading-meta text-left">Who Am I?</span>
 <h4 class="mb-5">ABOUT ME</h4>
 
-<p class="text-md-center text-sm-left text-xl-center text-lg-center m-4" style="font-size: 20px;">
+<p class="text-md-left text-sm-left text-xl-left text-lg-left m-4 pb-5" style="font-size: 20px;">
 
-    <strong>Hi I'm Ahmed Sakic</strong>.
-    Currently I am student of Information Technology that has various expertise in
-     Angular,Java,JavaScipt,c++,Html and Css.
-     I was born in 1996 in Tuzla, city of Bosnia and Herzegovina.
-     By the end of the year i will be 24 year old. <br>
-     I am final year student and will graduate from Internacionalna poslovno-informaciona akademija in mid 2021. 
+    <strong>Hi my name is Ahmed Sakic</strong>.
+    Currently I am final year student that has various expertise in
+     Angular,Bootstrap,Java,JavaScipt,C++,Html and Css. <br>
+     I am pursuing my Bachelor degree in Information Technology at Informaciono Internacionalna poslovno-informaciona akademija.
+     Made a few live projects including this portfolio.
+     <br><br>
+    
+     Lover of innovation and everything related to generate new knowledge.Face problems with a smile and solve them as soon as possible.
+     <br> Main goal is to learn and improve in web development field.
 </p>
 
 </div>
