--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -22,6 +22,10 @@
             <img src="./assets/images/facebook.svg" class="rounded mx-auto d-block" alt="">
             <p><a href="https://www.facebook.com/ahmed.sakic">Facebook</a></p><br><br>
 
+            <img src="./assets/images/linkedinfinal.png" class="rounded mx-auto d-block" alt="">
+            <p><a href="https://www.linkedin.com/in/ahmed-sakic-9b99041a4/">Linkedin</a></p><br><br>
+
+
 
 
         </div>
