--- a/src/app/education/education.component.html
+++ b/src/app/education/education.component.html
@@ -11,7 +11,7 @@
               High School
           </p>
           <ul>
-            <li>Class being held on English</li>
+            <li>Class held on English</li>
             <li>Mathematics and Informatics</li>
             <li>Various presentation skills</li>
         </ul>
@@ -27,13 +27,13 @@
         <div class="col-10 col-md-5 order-3 order-md-1 timeline-content">
           <h3 class=" text-light">BILDIT</h3>
           
-          <p>Course</p>
+          <p style="float: right;">Course</p>
           <ul>
             <li>Java Programming</li>
             <li>Object Oriented Programming in Java</li>
             <li>Git and GitHub</li>
             
-        </ul>
+        </ul> 
 
 
         </div>
@@ -41,7 +41,7 @@
           <img src="./assets/images/education.png" class="img-fluid" alt="img">
         </div>
         <div class="col-10 col-md-5 order-1 order-md-3 py-3 timeline-date">
-          <time>2019 - 2020</time>
+          <time> <b>2019 - 2020</b> </time>
         </div>
       </div>
       <div class="row no-gutters justify-content-end justify-content-md-around align-items-start  timeline-nodes">
@@ -67,7 +67,7 @@
           <img src="./assets/images/faculty.png" class="img-fluid" alt="img">
         </div>
         <div class="col-10 col-md-5 order-1 order-md-3 py-3 timeline-date">
-          <time>2018-Present</time>
+          <time> <b>2018-Present</b></time>
         </div>
       </div>
      
