--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,13 +1,18 @@
 <div class="homeclas" id="home">
     
-    <div class="img mb-4" style="background-image: url(./assets/images/img2.jpg);"></div>
+    <div class="img mb-4" style="background-image: url(./assets/images/homepic6.jpg);"></div>
     <div class="desc text text-center">
     
         <h2 class="subheading">Hello I am</h2>
         <h1 class="mb-4">Ahmed Sakic</h1>
-        <p class="mb-4"> Welcome to my first Angular portfolio <br>
+        <p class="mb-1"> Welcome to my first Angular portfolio <br>
         
         </p>
+    <a href="https://github.com/Mcraellhs">
+        <img src="./assets/images/GitHub-logo.png" class="logo" alt="">
+    </a>
+        
+
     
         
     </div>
