--- a/src/app/languages/languages.component.html
+++ b/src/app/languages/languages.component.html
@@ -10,7 +10,7 @@
             <img class="card-img-top" src="./assets/images/english.png" alt="Card image" style="width:100%; height: 220px;">
             <div class="card-body">
               <h4 class="card-title">English</h4>
-              <p class="card-text">Both well understood and spoken</p>
+              <p class="card-text">Both well understanding and speaking</p>
               
             </div>
           </div>
