--- a/src/app/projects/projects.component.html
+++ b/src/app/projects/projects.component.html
@@ -13,7 +13,7 @@
 <img src="./assets/images/project1.png" alt="">
 <h4>Scarface Game in Qt</h4>
 <b>Technology:</b>Qt5 and C++ <br>
-<div class="btn btn-success mr-2 disabled">Demo</div>
+<div class="btn btn-success mr-2 disabled">Live Demo</div>
 <div class="btn btn-success"><a href="https://github.com/Mcraellhs/Qt-c-Scarface-game">Source code</a></div>
 
 
@@ -24,23 +24,27 @@
     <img src="./assets/images/project2.png" alt="">
     <h4>Angular Portfolio</h4>
     <b>Technology:</b>Angular 10 and Bootstrap4 <br>
-    <div class="btn btn-success mr-2"><a href="https://app-portfolio-in-angular.herokuapp.com/">Demo</a></div>
+    <div class="btn btn-success mr-2"><a href="https://app-portfolio-in-angular.herokuapp.com/">Live Demo</a></div>
     <div class="btn btn-success"><a href="https://github.com/Mcraellhs/Personal-Portfolio-in-Angular">Source code</a></div>
     
     
     </div>
 
-    
+
     <div class="col-md-4">
         
-        <img src="./assets/images/project5.png" alt="">
-        <h4>JavaScript Table Form</h4>
-        <b>Technology:</b>JavaScript HTML CSS<br>
-        <div class="btn btn-success mr-2"><a href="https://mcraellhs.github.io/JavaScript---Table-Form-CRUD-/">Demo</a></div>
-        <div class="btn btn-success"><a href="https://github.com/Mcraellhs/JavaScript---Table-Form-CRUD-">Source code</a></div>
+        <img src="./assets/images/phppro.png" alt="">
+        <h4>Admin User Management</h4>
+        <b>Technology:</b>PHP,MySQL,Bootstrap<br>
+        <div class="btn btn-success mr-2 disabled"><a>Live Demo</a></div>
+        <div class="btn btn-success"><a href="https://github.com/Mcraellhs/PHP-Admin-User-Managment-System">Source code</a></div>
         
         
         </div>
+
+
+    
+    
     
 
 
@@ -49,11 +53,23 @@
     <div class="row mt-5">
 
         <div class="col-md-4">
+        
+            <img src="./assets/images/project5.png" alt="">
+            <h4>JavaScript Table Form</h4>
+            <b>Technology:</b>JavaScript HTML CSS<br>
+            <div class="btn btn-success mr-2"><a href="https://mcraellhs.github.io/JavaScript---Table-Form-CRUD-/">Live Demo</a></div>
+            <div class="btn btn-success"><a href="https://github.com/Mcraellhs/JavaScript---Table-Form-CRUD-">Source code</a></div>
+            
+            
+            </div>
+        
+
+        <div class="col-md-4">
 
             <img src="./assets/images/javafx.png" alt="">
             <h4 class="pt-4">JavaFX Quiz Simulator</h4>
             <b>Technology:</b>JavaFX MySQL <br>
-            <div class="btn btn-success mr-2 disabled">Demo</div>
+            <div class="btn btn-success mr-2 disabled">Live Demo</div>
             <div class="btn btn-success"><a href="https://github.com/Mcraellhs/JavaFX-Quiz-simulator-with-UI">Source code</a></div>
             
             
@@ -64,8 +80,8 @@
         
             <img src="./assets/images/project4.png" alt="">
             <h4>Qt 25 Question Quiz</h4>
-            <b>Technology:</b>Qt5 <br>
-            <div class="btn btn-success mr-2 disabled">Demo</div>
+            <b>Technology:</b>Qt5 MySQL <br>
+            <div class="btn btn-success mr-2 disabled">Live Demo</div>
             <div class="btn btn-success"><a href="https://github.com/Mcraellhs/QT-c-Quiz-with-DB">Source code</a></div>
             
             
