--- a/src/app/skills/skills.component.html
+++ b/src/app/skills/skills.component.html
@@ -20,6 +20,41 @@
         <div class="progress-bar bg-warning" role="progressbar" aria-valuenow="86" aria-valuemin="0" aria-valuemax="100" style="width: 80%;height:10px;">
       </div>
     </div>
+
+    <span style="float: left;">HTML/CSS</span>
+    <span style="float: right;">75%</span><br>
+    <div class="progress" style="height:5px">
+        <div class="progress-bar" role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100" style="width: 75%;height:10px;">
+      </div>
+    </div>
+    
+    <span style="float: left;">Angular</span>
+    <span style="float: right;">55%</span><br>
+    <div class="progress" style="height:5px">
+        <div class="progress-bar bg-danger" role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100" style="width: 55%;height:10px;">
+      </div>
+    </div>
+
+    <span style="float: left;">PHP</span>
+    <span style="float: right;">65%</span><br>
+    <div class="progress" style="height:5px">
+        <div class="progress-bar bg-info" role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100" style="width: 65%;height:10px;">
+      </div>
+    </div>
+
+
+  </div>
+
+
+
+
+
+
+
+  
+  <div class="col-md-6">
+    
+
     <span style="float: left;">C/C++</span>
     <span style="float: right;">60%</span><br>
     <div class="progress" style="height:5px">
@@ -27,21 +62,6 @@
       </div>
     </div>
 
-    <span style="float: left;">Angular/Bootstrap</span>
-    <span style="float: right;">55%</span><br>
-    <div class="progress" style="height:5px">
-        <div class="progress-bar bg-danger" role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100" style="width: 55%;height:10px;">
-      </div>
-    </div>
-  </div>
-
-  <div class="col-md-6">
-    <span style="float: left;">HTML/CSS</span>
-    <span style="float: right;">70%</span><br>
-    <div class="progress" style="height:5px">
-        <div class="progress-bar" role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100" style="width: 70%;height:10px;">
-      </div>
-    </div>
 
     <span style="float: left;">MySQL</span>
     <span style="float: right;">60%</span><br>
@@ -63,6 +83,16 @@
         <div class="progress-bar bg-info" role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100" style="width: 65%;height:10px;">
       </div>
     </div>
+
+
+    <span style="float: left;">Bootstrap</span>
+    <span style="float: right;">70%</span><br>
+    <div class="progress" style="height:5px">
+        <div class="progress-bar bg-primary" role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100" style="width: 70%;height:10px;">
+      </div>
+    </div>
+
+
   </div>
 </div>
     <hr>
